# ER-MusicTagManager

./: .gitignore  Dockerfile  LICENSE  README.md  VERSION  build.spec  docker-compose.yml  renovate.json
.github/: labeler.yml
.github/workflows/: ci-orchestrator.yml  pr-orchestrator.yml  release.yml  rollback.yml
backend/: Dockerfile  build.spec  fast_test.py  pyproject.toml  run_app.py  test_mb.py  test_scan.py
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/core/: logging.py  settings.py
backend/app/domain/: models.py
backend/app/services/: identification.py  organization.py  tagging.py
docs/: ARCHITECTURE.md  index.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
scripts/: check-prepush.sh  version_manager.py
